broken layout fixed

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,6 +5,12 @@
   --foreground: #171717;
 }
 
+html,
+body {
+  max-width: 100vw;
+  overflow-x: hidden;
+}
+
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
